--- a/css/style.css
+++ b/css/style.css
@@ -177,8 +177,8 @@ p {
     background-color: #061e37;
     border: none;
     outline: none;
-	cursor: pointer;
-	top: 36%;
+    cursor: pointer;
+    top: 36%;
 }
 
 .header__play-button::after {
@@ -192,4 +192,102 @@ p {
     text-transform: uppercase;
     top: 81px;
     left: -24px;
+}
+
+.tools {
+    padding: 100px 15px;
+}
+
+.h2-title {
+    text-align: center;
+    color: #061e37;
+    font-family: Raleway;
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 14px;
+}
+
+.tools__title {
+    text-align: center;
+    color: #b0bec5;
+    font-family: Raleway;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.paragraph {
+    text-align: center;
+    color: #b0bec5;
+    font-family: Raleway;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 25px;
+    padding: 0 30.5%;
+}
+
+.tools__block {
+    margin-top: 97px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tools__item {
+    text-align: center;
+    margin-bottom: 78px;
+    width: 24%;
+}
+
+.tools__icon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+.tools__span {
+    color: #061e37;
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 11px;
+}
+
+.tools__description {
+    color: #78909c;
+    font-family: Raleway;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.tools-icon-1 {
+    margin-bottom: 40px;
+}
+
+.tools-icon-2 {
+    margin-bottom: 35px;
+}
+
+.tools-icon-3 {
+    margin-bottom: 39px;
+}
+
+.tools__button {
+    border: none;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    background-color: #1de9b6;
+    width: 150px;
+    height: 55px;
+    display: block;
+    margin: 0 auto;
 }
